gpg: add stronger algorithms

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -26,3 +26,9 @@ keyserver hkp://keys.gnupg.net
 
 # Automatically download unknown gpg keys
 keyserver-options auto-key-retrieve
+
+# Set stronger algorithms
+personal-digest-preferences SHA512
+cert-digest-algo SHA512
+default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
