gpg: force cli pinentry for masters

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -27,6 +27,9 @@ keyserver hkp://keys.gnupg.net
 # Automatically download unknown gpg keys
 keyserver-options auto-key-retrieve
 
+# Force to use cli pinentry masters
+pinentry-program /usr/bin/pinentry-curses
+
 # Set stronger algorithms
 personal-digest-preferences SHA512
 cert-digest-algo SHA512
