--- a/weechat/install.conf
+++ b/weechat/install.conf
@@ -1,1 +1,6 @@
-"weechat.conf": "~/.weechat/weechat.conf"
+"weechat/weechat.conf": "~/.weechat/weechat.conf"
+"weechat/alias.conf": "~/.weechat/alias.conf"
+"weechat/autosort.conf": "~/.weechat/autosort.conf"
+"weechat/buffers.conf": "~/.weechat/buffers.conf"
+"weechat/plugins.conf": "~/.weechat/plugins.conf"
+"weechat/urlgrab.conf": "~/.weechat/urlgrab.conf"
