--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -33,7 +33,7 @@ color_inactive_message = on
 color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
-color_inactive_window = on
+color_inactive_window = off
 color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
@@ -83,7 +83,7 @@ paste_bracketed_timer_delay = 10
 paste_max_lines = 1
 prefix_action = "⚡"
 prefix_align = right
-prefix_align_max = 15
+prefix_align_max = 10
 prefix_align_min = 0
 prefix_align_more = "+"
 prefix_align_more_after = on
@@ -130,8 +130,8 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = yellow
-chat_highlight_bg = magenta
+chat_highlight = red
+chat_highlight_bg = default
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
@@ -166,7 +166,7 @@ emphasized = yellow
 emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
-nicklist_away = cyan
+nicklist_away = 11
 nicklist_group = green
 nicklist_offline = blue
 separator = blue
@@ -174,7 +174,7 @@ status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
 status_count_private = green
-status_data_highlight = lightmagenta
+status_data_highlight = magenta
 status_data_msg = yellow
 status_data_other = default
 status_data_private = lightgreen
@@ -230,32 +230,18 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
 buffers.separator = on
 buffers.size = 0
-buffers.size_max = 0
+buffers.size_max = 20
 buffers.type = root
-input.color_bg = default
-input.color_delim = cyan
-input.color_fg = default
-input.conditions = ""
-input.filling_left_right = vertical
-input.filling_top_bottom = horizontal
-input.hidden = off
-input.items = "[input_prompt]+(away),[input_search],[input_paste],input_text"
-input.position = bottom
-input.priority = 1000
-input.separator = off
-input.size = 1
-input.size_max = 0
-input.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
-nicklist.conditions = "${nicklist}"
+nicklist.conditions = "${nicklist} && ${active}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
 nicklist.hidden = off
@@ -264,8 +250,36 @@ nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
 nicklist.size = 0
-nicklist.size_max = 0
+nicklist.size_max = 15
 nicklist.type = window
+rootglobalstatus.color_bg = black
+rootglobalstatus.color_delim = cyan
+rootglobalstatus.color_fg = default
+rootglobalstatus.conditions = ""
+rootglobalstatus.filling_left_right = vertical
+rootglobalstatus.filling_top_bottom = horizontal
+rootglobalstatus.hidden = off
+rootglobalstatus.items = "[hotlist],[lag],completion,[aspell_dict+: aspell_suggest+]"
+rootglobalstatus.position = bottom
+rootglobalstatus.priority = 10
+rootglobalstatus.separator = off
+rootglobalstatus.size = 0
+rootglobalstatus.size_max = 0
+rootglobalstatus.type = root
+rootinput.color_bg = default
+rootinput.color_delim = default
+rootinput.color_fg = default
+rootinput.conditions = ""
+rootinput.filling_left_right = vertical
+rootinput.filling_top_bottom = horizontal
+rootinput.hidden = off
+rootinput.items = "window_number,[buffer_name],[input_prompt]+(away),[input_search],[input_paste],input_text"
+rootinput.position = bottom
+rootinput.priority = 100
+rootinput.separator = off
+rootinput.size = 1
+rootinput.size_max = 0
+rootinput.type = root
 status.color_bg = black
 status.color_delim = cyan
 status.color_fg = default
@@ -273,17 +287,17 @@ status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
-status.items = "[time],[buffer_count],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,[lag],[hotlist],completion,scroll"
+status.items = "window_number/+buffer_number+: [buffer_plugin],buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll"
 status.position = bottom
 status.priority = 500
 status.separator = off
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = black
+title.color_bg = 25
 title.color_delim = cyan
-title.color_fg = default
-title.conditions = ""
+title.color_fg = 250
+title.conditions = "${active}"
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
 title.hidden = off
@@ -410,6 +424,24 @@ meta-_ = "/input redo"
 meta-a = "/input jump_smart"
 meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
+meta-emeta-meta2-A = "/window up"
+meta-emeta-meta2-B = "/window down"
+meta-emeta-meta2-C = "/window right"
+meta-emeta-meta2-D = "/window left"
+meta-emeta2-1;3A = "/window up"
+meta-emeta2-1;3B = "/window down"
+meta-emeta2-1;3C = "/window right"
+meta-emeta2-1;3D = "/window left"
+meta-emeta-b = "/window balance"
+meta-emeta-s = "/window swap"
+meta-e1 = "/window 1"
+meta-e2 = "/window 2"
+meta-e3 = "/window 3"
+meta-e4 = "/window 4"
+meta-e5 = "/window 5"
+meta-e6 = "/window 6"
+meta-e7 = "/window 7"
+meta-e8 = "/window 8"
 meta-f = "/input move_next_word"
 meta-h = "/input hotlist_clear"
 meta-jmeta-l = "/input jump_last_buffer"
@@ -521,16 +553,6 @@ meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
 meta-s = "/mute aspell toggle"
 meta-u = "/window scroll_unread"
-meta-wmeta-meta2-A = "/window up"
-meta-wmeta-meta2-B = "/window down"
-meta-wmeta-meta2-C = "/window right"
-meta-wmeta-meta2-D = "/window left"
-meta-wmeta2-1;3A = "/window up"
-meta-wmeta2-1;3B = "/window down"
-meta-wmeta2-1;3C = "/window right"
-meta-wmeta2-1;3D = "/window left"
-meta-wmeta-b = "/window balance"
-meta-wmeta-s = "/window swap"
 meta-x = "/input zoom_merged_buffer"
 meta-z = "/window zoom"
 ctrl-_ = "/input undo"
