weechat: add root nicklist

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -238,20 +238,6 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 20
 buffers.type = root
-nicklist.color_bg = default
-nicklist.color_delim = cyan
-nicklist.color_fg = default
-nicklist.conditions = "${nicklist} && ${active}"
-nicklist.filling_left_right = vertical
-nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
-nicklist.items = "buffer_nicklist"
-nicklist.position = right
-nicklist.priority = 200
-nicklist.separator = on
-nicklist.size = 0
-nicklist.size_max = 15
-nicklist.type = window
 rootglobalstatus.color_bg = black
 rootglobalstatus.color_delim = cyan
 rootglobalstatus.color_fg = default
@@ -280,6 +266,20 @@ rootinput.separator = off
 rootinput.size = 1
 rootinput.size_max = 0
 rootinput.type = root
+rootnicklist.color_bg = default
+rootnicklist.color_delim = cyan
+rootnicklist.color_fg = default
+rootnicklist.conditions = "${nicklist}"
+rootnicklist.filling_left_right = vertical
+rootnicklist.filling_top_bottom = columns_vertical
+rootnicklist.hidden = off
+rootnicklist.items = "buffer_nicklist"
+rootnicklist.position = right
+rootnicklist.priority = 200
+rootnicklist.separator = on
+rootnicklist.size = 0
+rootnicklist.size_max = 15
+rootnicklist.type = root
 status.color_bg = black
 status.color_delim = cyan
 status.color_fg = default
