Little design modifications

--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -8,6 +8,14 @@ guile.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
 python.check_license = "off"
+python.spell_correction.auto_pop_up_item = "off"
+python.spell_correction.auto_replace = "on"
+python.spell_correction.catch_input_completion = "on"
+python.spell_correction.complete_near = "0"
+python.spell_correction.eat_input_char = "on"
+python.spell_correction.hide_single_dict = "on"
+python.spell_correction.replace_mode = "off"
+python.spell_correction.suggest_item = "${white}%S${default}"
 ruby.check_license = "off"
 tcl.check_license = "off"
 weenick.server_default.nickserv_failed = "access denied"
@@ -17,6 +25,14 @@ weenick.server_default.nickserv_nick = "NickServ"
 weenick.server_default.nickserv_registered = "nickname is registered"
 
 [desc]
+python.spell_correction.auto_pop_up_item = "automatic pop-up suggestion item on a misspelled word (default: "off")"
+python.spell_correction.auto_replace = "replaces misspelled word with selected suggestion, automatically. If you use "off" you will have to bind command "/spell_correction replace" to a key (default: "on")"
+python.spell_correction.catch_input_completion = "will catch the input_complete commands [TAB-key] (default: "on")"
+python.spell_correction.complete_near = "show suggestions item only if you are n-chars near the misspelled word (0 = off). Using 'replace_mode' cursor has to be n-chars near misspelled word to cycle through suggestions. (default: "0")"
+python.spell_correction.eat_input_char = "will eat the next char you type, after replacing a misspelled word (default: "on")"
+python.spell_correction.hide_single_dict = "will hide dict in item if you have a single dict for buffer only (default: "on")"
+python.spell_correction.replace_mode = "misspelled word will be replaced directly by suggestions. Use option 'complete_near' to specify range and item 'spell_suggest' to show possible suggestions. (default: "off")"
+python.spell_correction.suggest_item = "item format (%S = suggestion, %D = dict). Colors are allowed with format "${color}". note: since WeeChat 0.4.2 content is evaluated, see /help eval. (default: "${white}%S${default}")"
 weenick.server_default.command = "command(s) to get processed upon identification"
 weenick.server_default.nick = "registered nickname"
 weenick.server_default.nickserv_failed = "string to identify notice that password is wrong"
