weechat: more tweaks

--- a/weechat/weechat/alias.conf
+++ b/weechat/weechat/alias.conf
@@ -8,6 +8,7 @@ AME = "allchan /me"
 AMSG = "allchan /msg *"
 ANICK = "allserv /nick"
 BEEP = "print -stderr \a"
+bnlp = "/say bonne nuit, lege paswap"
 BYE = "quit"
 C = "buffer clear"
 CHAT = "dcc chat"
