--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -8,6 +8,25 @@ guile.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
 python.check_license = "off"
+python.inotify.color_nick = "on"
+python.inotify.ignore_channel = ""
+python.inotify.ignore_nick = ""
+python.inotify.ignore_text = ""
+python.inotify.passwd = ""
+python.inotify.server_method = "any"
+python.inotify.server_uri = "http://localhost:7766"
+python.lnotify.highlight = "on"
+python.lnotify.icon = "weechat"
+python.lnotify.notify_away = "off"
+python.lnotify.query = "on"
+python.notify.icon = "/usr/share/pixmaps/weechat.xpm"
+python.notify.ignore_nicks_startwith = "*"
+python.notify.nick_separator = ": "
+python.notify.notify_when_away = "off"
+python.notify.show_hilights = "on"
+python.notify.show_priv_msg = "on"
+python.notify.smart_notification = "off"
+python.notify.urgency = "normal"
 python.spell_correction.auto_pop_up_item = "off"
 python.spell_correction.auto_replace = "on"
 python.spell_correction.catch_input_completion = "on"
@@ -16,6 +35,7 @@ python.spell_correction.eat_input_char = "on"
 python.spell_correction.hide_single_dict = "on"
 python.spell_correction.replace_mode = "off"
 python.spell_correction.suggest_item = "${white}%S${default}"
+python.text_item.active_buffer_number = "all|buffer_switch ${color:014}${buffer.number}"
 ruby.check_license = "off"
 tcl.check_license = "off"
 weenick.server_default.nickserv_failed = "access denied"
