--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -33,7 +33,7 @@ color_inactive_message = on
 color_inactive_prefix = on
 color_inactive_prefix_buffer = on
 color_inactive_time = off
-color_inactive_window = on
+color_inactive_window = off
 color_nick_offline = off
 color_pairs_auto_reset = 5
 color_real_white = off
@@ -224,6 +224,20 @@ path = "%h/plugins"
 save_config_on_unload = on
 
 [bar]
+activestatus.color_bg = 25
+activestatus.color_delim = cyan
+activestatus.color_fg = white
+activestatus.conditions = "${active}"
+activestatus.filling_left_right = vertical
+activestatus.filling_top_bottom = horizontal
+activestatus.hidden = off
+activestatus.items = "window_number/+active_buffer_number+: [buffer_plugin],buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll"
+activestatus.position = bottom
+activestatus.priority = 500
+activestatus.separator = off
+activestatus.size = 1
+activestatus.size_max = 0
+activestatus.type = window
 buffers.color_bg = default
 buffers.color_delim = default
 buffers.color_fg = default
@@ -238,6 +252,20 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 20
 buffers.type = root
+isetbar.color_bg = default
+isetbar.color_delim = cyan
+isetbar.color_fg = default
+isetbar.conditions = ""
+isetbar.filling_left_right = vertical
+isetbar.filling_top_bottom = horizontal
+isetbar.hidden = on
+isetbar.items = "isetbar_help"
+isetbar.position = top
+isetbar.priority = 0
+isetbar.separator = on
+isetbar.size = 3
+isetbar.size_max = 3
+isetbar.type = window
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -282,8 +310,8 @@ rootinput.size_max = 0
 rootinput.type = root
 status.color_bg = black
 status.color_delim = cyan
-status.color_fg = default
-status.conditions = ""
+status.color_fg = white
+status.conditions = "${inactive}"
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = off
@@ -596,6 +624,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(perl.iset):button1 = "hsignal:iset_mouse"
+@chat(perl.iset):button2* = "hsignal:iset_mouse"
+@chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
+@chat(perl.iset):wheelup = "/repeat 5 /iset **up"
 @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
