weechat: switch input to window type

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -252,6 +252,20 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 20
 buffers.type = root
+input.color_bg = default
+input.color_delim = default
+input.color_fg = default
+input.conditions = "${active}"
+input.filling_left_right = vertical
+input.filling_top_bottom = horizontal
+input.hidden = off
+input.items = " window_number,[buffer_name],[input_prompt]+(away),[input_search],[input_paste],input_text"
+input.position = bottom
+input.priority = 550
+input.separator = off
+input.size = 1
+input.size_max = 0
+input.type = window
 isetbar.color_bg = default
 isetbar.color_delim = cyan
 isetbar.color_fg = default
@@ -275,12 +289,12 @@ nicklist.filling_top_bottom = columns_vertical
 nicklist.hidden = off
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
-nicklist.priority = 95
+nicklist.priority = 85
 nicklist.separator = on
 nicklist.size = 0
 nicklist.size_max = 17
 nicklist.type = root
-rootglobalstatus.color_bg = black
+rootglobalstatus.color_bg = default
 rootglobalstatus.color_delim = cyan
 rootglobalstatus.color_fg = default
 rootglobalstatus.conditions = ""
@@ -294,20 +308,6 @@ rootglobalstatus.separator = off
 rootglobalstatus.size = 0
 rootglobalstatus.size_max = 0
 rootglobalstatus.type = root
-rootinput.color_bg = default
-rootinput.color_delim = default
-rootinput.color_fg = default
-rootinput.conditions = ""
-rootinput.filling_left_right = vertical
-rootinput.filling_top_bottom = horizontal
-rootinput.hidden = off
-rootinput.items = " window_number,[buffer_name],[input_prompt]+(away),[input_search],[input_paste],input_text"
-rootinput.position = bottom
-rootinput.priority = 100
-rootinput.separator = off
-rootinput.size = 1
-rootinput.size_max = 0
-rootinput.type = root
 status.color_bg = black
 status.color_delim = cyan
 status.color_fg = white
