weechat: add newsbar

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -280,6 +280,34 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = on
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = on
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -371,6 +399,7 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
+meta-ctrl-M = "/newsbar clear"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -384,19 +413,12 @@ meta-meta2-B = "/buffer +1"
 meta-meta2-C = "/buffer +1"
 meta-meta2-D = "/buffer -1"
 meta-/ = "/input jump_last_buffer_displayed"
-meta-0 = "/buffer *10"
-meta-1 = "/buffer *1"
-meta-2 = "/buffer *2"
-meta-3 = "/buffer *3"
-meta-4 = "/buffer *4"
-meta-5 = "/buffer *5"
-meta-6 = "/buffer *6"
-meta-7 = "/buffer *7"
-meta-8 = "/buffer *8"
-meta-9 = "/buffer *9"
+meta-0 = "/newsbar scroll_down"
+meta-9 = "/newsbar scroll_up"
 meta-< = "/input jump_previously_visited_buffer"
 meta-= = "/filter toggle"
 meta-> = "/input jump_next_visited_buffer"
+meta-A = "/newsbar toggle"
 meta-OA = "/input history_global_previous"
 meta-OB = "/input history_global_next"
 meta-OC = "/input move_next_word"
@@ -407,6 +429,7 @@ meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
 meta-Od = "/input move_previous_word"
+meta-Z = "/window bare"
 meta2-15~ = "/buffer -1"
 meta2-17~ = "/buffer +1"
 meta2-18~ = "/window -1"
@@ -583,6 +606,8 @@ meta-s = "/mute aspell toggle"
 meta-u = "/window scroll_unread"
 meta-x = "/input zoom_merged_buffer"
 meta-z = "/window zoom"
+meta-à = "/newsbar scroll_page_down"
+meta-ç = "/newsbar scroll_page_up"
 ctrl-_ = "/input undo"
 
 [key_search]
