--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -7,6 +7,41 @@ fifo.fifo = "on"
 guile.check_license = "off"
 lua.check_license = "off"
 perl.check_license = "off"
+perl.newsbar.away_only = "off"
+perl.newsbar.bar_auto_hide = "on"
+perl.newsbar.bar_hidden_on_start = "1"
+perl.newsbar.bar_name = "newsbar"
+perl.newsbar.bar_seperator = "on"
+perl.newsbar.bar_title = "Highlights"
+perl.newsbar.bar_visible_lines = "4"
+perl.newsbar.beep_cmd = "beep -f %F -l %L"
+perl.newsbar.beep_duration = "20"
+perl.newsbar.beep_freq_channel = "1000"
+perl.newsbar.beep_freq_msg = "1000"
+perl.newsbar.beep_freq_private = "1000"
+perl.newsbar.beep_remote = "off"
+perl.newsbar.beeps = "on"
+perl.newsbar.blacklist_buffers = ""
+perl.newsbar.color_info_msg_tag = "cyan"
+perl.newsbar.color_privmsg_tag = "red"
+perl.newsbar.color_server_msg_tag = "magenta"
+perl.newsbar.color_status_name = "white"
+perl.newsbar.color_status_number = "yellow"
+perl.newsbar.colored_help = "on"
+perl.newsbar.debug = "on"
+perl.newsbar.format_private = "%N@%s"
+perl.newsbar.format_public = "%N.%C@%s"
+perl.newsbar.highlights_current_channel = "on"
+perl.newsbar.memo_tag_color = "yellow"
+perl.newsbar.most_recent = "first"
+perl.newsbar.nick_flood_max_nicks = "4"
+perl.newsbar.nick_flood_protection = "off"
+perl.newsbar.remove_bar_on_unload = "on"
+perl.newsbar.show_highlights = "on"
+perl.newsbar.show_priv_msg = "off"
+perl.newsbar.show_priv_server_msg = "on"
+perl.newsbar.ssh_host = ""
+perl.newsbar.ssh_key = ""
 python.check_license = "off"
 python.inotify.color_nick = "on"
 python.inotify.ignore_channel = ""
