--- a/qtile/install.conf
+++ b/qtile/install.conf
@@ -1,2 +1,3 @@
+"qtile/autostart.sh": "~/.config/qtile/autostart.sh"
 "qtile/config.py": "~/.config/qtile/config.py"
 "qtile/startup.py": "~/.config/qtile/startup.py"
