weechat: use secure passphrase

--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -38,8 +38,8 @@ perl.newsbar.nick_flood_max_nicks = "4"
 perl.newsbar.nick_flood_protection = "off"
 perl.newsbar.remove_bar_on_unload = "on"
 perl.newsbar.show_highlights = "on"
-perl.newsbar.show_priv_msg = "off"
-perl.newsbar.show_priv_server_msg = "on"
+perl.newsbar.show_priv_msg = "on"
+perl.newsbar.show_priv_server_msg = "off"
 perl.newsbar.ssh_host = ""
 perl.newsbar.ssh_key = ""
 python.check_license = "off"
