--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -244,7 +244,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -280,34 +280,6 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
-newsbar.color_bg = default
-newsbar.color_delim = default
-newsbar.color_fg = default
-newsbar.conditions = ""
-newsbar.filling_left_right = vertical
-newsbar.filling_top_bottom = vertical
-newsbar.hidden = on
-newsbar.items = "newsbar"
-newsbar.position = top
-newsbar.priority = 1000
-newsbar.separator = on
-newsbar.size = 0
-newsbar.size_max = 4
-newsbar.type = root
-newsbar_title.color_bg = 25
-newsbar_title.color_delim = default
-newsbar_title.color_fg = default
-newsbar_title.conditions = ""
-newsbar_title.filling_left_right = vertical
-newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = on
-newsbar_title.items = "newsbar_title"
-newsbar_title.position = top
-newsbar_title.priority = 1010
-newsbar_title.separator = off
-newsbar_title.size = 0
-newsbar_title.size_max = 1
-newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -644,6 +616,8 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
+@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
+@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
