compton: tweak for better perf in games

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -42,16 +42,19 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = opengl-swc;
+vsync = "opengl-swc";
 dbe = false;
 paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
+unredir-if-possible = true;
 
 # GLX backend
 glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+xrender-sync-fence = true;
 
 # Window type settings
 wintypes:
