weechat: disable human bar

--- a/weechat/weechat/alias.conf
+++ b/weechat/weechat/alias.conf
@@ -26,6 +26,8 @@ N = "names"
 Q = "query"
 REDRAW = "window refresh"
 SAY = "msg *"
+serv_sfilter = "filter add irc_smart_$server irc.$server.* irc_smart_filter *"
+sfilter = "filter add irc_smart_$server_$channel irc.$server.$channel irc_smart_filter *"
 SIGNOFF = "quit"
 split = "/window splitv"
 split21 = "/window splitv; /window left; /window splith"
