--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -40,6 +40,7 @@ color_real_white = off
 command_chars = ""
 command_incomplete = off
 confirm_quit = off
+confirm_upgrade = off
 day_change = on
 day_change_message_1date = "-- %a, %d %b %Y --"
 day_change_message_2dates = "-- %%a, %%d %%b %%Y (%a, %d %b %Y) --"
@@ -74,6 +75,7 @@ jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
 key_bind_safe = on
+key_grab_delay = 800
 mouse = off
 mouse_timer_delay = 100
 nick_prefix = ""
@@ -244,7 +246,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -280,6 +282,34 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = on
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = on
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -301,7 +331,7 @@ rootglobalstatus.conditions = ""
 rootglobalstatus.filling_left_right = vertical
 rootglobalstatus.filling_top_bottom = horizontal
 rootglobalstatus.hidden = off
-rootglobalstatus.items = "[hotlist],[lag],completion,[aspell_dict+: aspell_suggest+]"
+rootglobalstatus.items = "buffer_name,[lag],completion,[aspell_dict+: aspell_suggest+]"
 rootglobalstatus.position = bottom
 rootglobalstatus.priority = 90
 rootglobalstatus.separator = off
@@ -342,6 +372,9 @@ title.type = window
 [notify]
 
 [filter]
+irc_smart_znc-freenode = on;irc.znc-freenode.*;irc_smart_filter;*
+irc_smart_znc-whatcd_#what.cd = on;irc.znc-whatcd.#what.cd;irc_smart_filter;*
+irc_smart_znc-oftc_#qtile = on;irc.znc-oftc.#qtile;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
@@ -425,6 +458,8 @@ meta2-23;3~ = "/bar scroll nicklist * b"
 meta2-23~ = "/bar scroll nicklist * -100%"
 meta2-24;3~ = "/bar scroll nicklist * e"
 meta2-24~ = "/bar scroll nicklist * +100%"
+meta2-28~ = "/bar scroll buffers * b"
+meta2-29~ = "/bar scroll buffers * e"
 meta2-3~ = "/input delete_next_char"
 meta2-4~ = "/input move_end_of_line"
 meta2-5;3~ = "/window scroll_up"
