--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -27,4 +27,6 @@ main_window_highlight_color = "default"
 alternative_ui_separator_color = "yellow"
 progressbar_color = "yellow"
 
-locked_screen_width_part = 30
+locked_screen_width_part = 40
+screen_switcher_mode = playlist, media_library
+jump_to_now_playing_song_at_start = yes
