--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -375,6 +375,7 @@ title.type = window
 irc_smart_znc-freenode = on;irc.znc-freenode.*;irc_smart_filter;*
 irc_smart_znc-whatcd_#what.cd = on;irc.znc-whatcd.#what.cd;irc_smart_filter;*
 irc_smart_znc-oftc_#qtile = on;irc.znc-oftc.#qtile;irc_smart_filter;*
+irc_smart_znc-whatcd_#french = on;irc.znc-whatcd.#french;irc_smart_filter;*
 
 [key]
 ctrl-? = "/input delete_previous_char"
