Add otr in weechat

--- a/weechat/install.conf
+++ b/weechat/install.conf
@@ -1,6 +1,7 @@
-"weechat/weechat.conf": "~/.weechat/weechat.conf"
 "weechat/alias.conf": "~/.weechat/alias.conf"
 "weechat/autosort.conf": "~/.weechat/autosort.conf"
 "weechat/buffers.conf": "~/.weechat/buffers.conf"
+"weechat/otr.conf": "~/.weechat/otr.conf"
 "weechat/plugins.conf": "~/.weechat/plugins.conf"
 "weechat/urlgrab.conf": "~/.weechat/urlgrab.conf"
+"weechat/weechat.conf": "~/.weechat/weechat.conf"
