--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,14 @@ set -g default-terminal "screen-256color"
 set-option -g status on
 set -g status-utf8 on
 
-#### COLOUR (Solarized dark)
+#### Rebind ####
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+#### COLOUR (Solarized dark) ####
 
 # default statusbar colors
 set-option -g status-bg black #base02
