--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -27,6 +27,7 @@ blur-background-exclude = [
 	"window_type = 'desktop'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
+opacity-rule = [ "40:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
 
 # Fading
 fading = false;
