--- a/weechat/weechat/alias.conf
+++ b/weechat/weechat/alias.conf
@@ -7,6 +7,7 @@ AAWAY = "allserv /away"
 AME = "allchan /me"
 AMSG = "allchan /msg *"
 ANICK = "allserv /nick"
+b = "buffer"
 BEEP = "print -stderr \a"
 bnlp = "/say bonne nuit, lege paswap"
 BYE = "quit"
