--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -67,6 +67,7 @@ input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
+item_away_message = on
 item_buffer_filter = "⚑"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
@@ -78,8 +79,12 @@ key_bind_safe = on
 key_grab_delay = 800
 mouse = off
 mouse_timer_delay = 100
+nick_color_force = ""
+nick_color_hash = djb2
+nick_color_stop_chars = "_|["
 nick_prefix = ""
 nick_suffix = ""
+paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
@@ -164,13 +169,14 @@ chat_text_found_bg = lightmagenta
 chat_time = default
 chat_time_delimiters = brown
 chat_value = cyan
+chat_value_null = blue
 emphasized = yellow
 emphasized_bg = magenta
 input_actions = lightgreen
 input_text_not_found = red
+item_away = yellow
 nicklist_away = 11
 nicklist_group = green
-nicklist_offline = blue
 separator = blue
 status_count_highlight = magenta
 status_count_msg = brown
@@ -246,7 +252,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = off
+buffers.hidden = on
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -282,34 +288,6 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
-newsbar.color_bg = default
-newsbar.color_delim = default
-newsbar.color_fg = default
-newsbar.conditions = ""
-newsbar.filling_left_right = vertical
-newsbar.filling_top_bottom = vertical
-newsbar.hidden = on
-newsbar.items = "newsbar"
-newsbar.position = top
-newsbar.priority = 1000
-newsbar.separator = on
-newsbar.size = 0
-newsbar.size_max = 4
-newsbar.type = root
-newsbar_title.color_bg = 25
-newsbar_title.color_delim = default
-newsbar_title.color_fg = default
-newsbar_title.conditions = ""
-newsbar_title.filling_left_right = vertical
-newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = on
-newsbar_title.items = "newsbar_title"
-newsbar_title.position = top
-newsbar_title.priority = 1010
-newsbar_title.separator = off
-newsbar_title.size = 0
-newsbar_title.size_max = 1
-newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
