--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -211,9 +211,9 @@ partial_completion_other = off
 
 [history]
 display_default = 5
-max_buffer_lines_minutes = 0
+max_buffer_lines_minutes = 5760
 max_buffer_lines_number = 4096
-max_commands = 100
+max_commands = 50
 max_visited_buffers = 50
 
 [proxy]
@@ -252,7 +252,7 @@ buffers.color_fg = default
 buffers.conditions = ""
 buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
+buffers.hidden = off
 buffers.items = "buffers"
 buffers.position = left
 buffers.priority = 0
@@ -288,6 +288,34 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = on
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = on
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
