--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -11,7 +11,8 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
+    "n:w:*VirtualBox*"
 ];
 
 # Opacity
