--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -22,7 +22,9 @@
 
 # Uncomment the following option to get rid of the copyright notice
 
-keyserver hkp://keys.gnupg.net
+keyserver keys.gnupg.net
+keyserver hkp://subkeys.pgp.net
+keyserver http://pgp.mit.edu
 
 # Automatically download unknown gpg keys
 keyserver-options auto-key-retrieve
