--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,8 @@ set -g default-terminal "screen-256color"
 
 set-option -g status on
 
+set-window-option -g xterm-keys on
+
 #### Rebind ####
 
 bind h select-pane -L
