--- a/weechat/weechat/plugins.conf
+++ b/weechat/weechat/plugins.conf
@@ -21,7 +21,7 @@ perl.newsbar.beep_freq_msg = "1000"
 perl.newsbar.beep_freq_private = "1000"
 perl.newsbar.beep_remote = "off"
 perl.newsbar.beeps = "on"
-perl.newsbar.blacklist_buffers = ""
+perl.newsbar.blacklist_buffers = "znc-whatcd.*status"
 perl.newsbar.color_info_msg_tag = "cyan"
 perl.newsbar.color_privmsg_tag = "red"
 perl.newsbar.color_server_msg_tag = "magenta"
