--- a/weechat/weechat/otr.conf
+++ b/weechat/weechat/otr.conf
@@ -41,4 +41,6 @@ default.log = off
 default.require_encryption = off
 default.send_tag = off
 znc-rezosup.anthony.arcaik.send_tag = on
+znc-rezosup.anthony.depierre.send_tag = on
+znc-rezosup.anthony.fr33tux.send_tag = on
 znc-rezosup.anthony.lopar.send_tag = on
