--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -41,10 +41,11 @@ fade-exclude = [ ];
 backend = "glx"
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
+use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
-vsync = "opengl-swc";
+# refresh-rate = 0;
+vsync = "none";
 dbe = false;
 paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
@@ -57,6 +58,7 @@ unredir-if-possible = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 xrender-sync-fence = true;
+glx-swap-method = "buffer-age";
 
 # Window type settings
 wintypes:
