compton: switch to vsync opengl-mswc
Better performances than vsync none

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -44,8 +44,8 @@ mark-ovredir-focused = true;
 use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-# refresh-rate = 0;
-vsync = "none";
+refresh-rate = 0;
+vsync = "opengl-mswc";
 dbe = false;
 paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
@@ -58,7 +58,7 @@ unredir-if-possible = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 xrender-sync-fence = true;
-glx-swap-method = "buffer-age";
+glx-swap-method = "undefined";
 
 # Window type settings
 wintypes:
