--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -58,7 +58,7 @@ unredir-if-possible = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 xrender-sync-fence = true;
-glx-swap-method = "undefined";
+glx-swap-method = "buffer-age";
 
 # Window type settings
 wintypes:
