weechat: change max history number

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- weechat.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [debug]
 
@@ -13,6 +20,7 @@ sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
+align_multiline_words = on
 bar_more_down = "▼"
 bar_more_left = "◀"
 bar_more_right = "▶"
@@ -211,9 +219,9 @@ partial_completion_other = off
 
 [history]
 display_default = 5
-max_buffer_lines_minutes = 0
-max_buffer_lines_number = 4096
-max_commands = 100
+max_buffer_lines_minutes = 5760
+max_buffer_lines_number = 0
+max_commands = 20
 max_visited_buffers = 50
 
 [proxy]
