--- a/pulseaudio/install.conf
+++ b/pulseaudio/install.conf
@@ -1,4 +1,4 @@
-"client.conf": ~/.config/pulse/client.conf
-"daemon.conf": ~/.config/pulse/daemon.conf
-"default.pa": ~/.config/pulse/default.pa
-"system.pa": ~/.config/pulse/system.pa
+"client.conf": "~/.config/pulse/client.conf"
+"daemon.conf": "~/.config/pulse/daemon.conf"
+"default.pa": "~/.config/pulse/default.pa"
+"system.pa": "~/.config/pulse/system.pa"
