bspwm: add screen profile colors

--- a/bspwm/install.conf
+++ b/bspwm/install.conf
@@ -1,2 +1,3 @@
 "bspwmrc": "~/.config/bspwm/bspwmrc"
 "wallpaper": "~/.config/bspwm/wallpaper"
+"xps15_9560.icm": "~/.config/bspwm/screen_calib.icc"
