--- a/gtk/gtk3-settings.ini
+++ b/gtk/gtk3-settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-application-prefer-dark-theme=0
 gtk-theme-name=Adwaita
-icon-theme-name=Numix-Circle
-gtk-font-name=Cantarell 11
+gtk-icon-theme-name=Numix-Circle
+# gtk-font-name=Arimo 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
