weechat: upgrade to 1.8-dev
Switch from bufferlist to buflist (integrated into weechat)

--- a/weechat/weechat/otr.conf
+++ b/weechat/weechat/otr.conf
@@ -51,3 +51,4 @@ znc-rezosup.anthony.arcaik.send_tag = on
 znc-rezosup.anthony.depierre.send_tag = on
 znc-rezosup.anthony.fr33tux.send_tag = on
 znc-rezosup.anthony.lopar.send_tag = on
+znc-rezosup.anthony.simon.send_tag = on
