--- a/weechat/install.conf
+++ b/weechat/install.conf
@@ -1,6 +1,6 @@
 "weechat/alias.conf": "~/.weechat/alias.conf"
 "weechat/autosort.conf": "~/.weechat/autosort.conf"
-"weechat/buffers.conf": "~/.weechat/buffers.conf"
+"weechat/buflist.conf": "~/.weechat/buflist.conf"
 "weechat/otr.conf": "~/.weechat/otr.conf"
 "weechat/plugins.conf": "~/.weechat/plugins.conf"
 "weechat/urlgrab.conf": "~/.weechat/urlgrab.conf"
