weechat: upgrade to 1.8-dev
Switch from bufferlist to buflist (integrated into weechat)

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -268,6 +268,20 @@ buffers.separator = on
 buffers.size = 0
 buffers.size_max = 20
 buffers.type = root
+buflist.color_bg = default
+buflist.color_delim = default
+buflist.color_fg = default
+buflist.conditions = ""
+buflist.filling_left_right = vertical
+buflist.filling_top_bottom = columns_vertical
+buflist.hidden = off
+buflist.items = "buflist"
+buflist.position = left
+buflist.priority = 0
+buflist.separator = on
+buflist.size = 0
+buflist.size_max = 0
+buflist.type = root
 input.color_bg = default
 input.color_delim = default
 input.color_fg = default
@@ -288,7 +302,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
+isetbar.hidden = off
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -296,6 +310,34 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = off
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = off
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -449,8 +491,8 @@ meta2-23;3~ = "/bar scroll nicklist * b"
 meta2-23~ = "/bar scroll nicklist * -100%"
 meta2-24;3~ = "/bar scroll nicklist * e"
 meta2-24~ = "/bar scroll nicklist * +100%"
-meta2-28~ = "/bar scroll buffers * b"
-meta2-29~ = "/bar scroll buffers * e"
+meta2-28~ = "/bar scroll buflist * b"
+meta2-29~ = "/bar scroll buflist * e"
 meta2-3~ = "/input delete_next_char"
 meta2-4~ = "/input move_end_of_line"
 meta2-5;3~ = "/window scroll_up"
@@ -648,6 +690,8 @@ meta2-D = "/cursor move left"
 [key_mouse]
 @bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
 @bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
+@bar(buflist):ctrl-wheeldown = "hsignal:buflist_mouse"
+@bar(buflist):ctrl-wheelup = "hsignal:buflist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
@@ -668,6 +712,8 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
 @item(buffers):button1* = "hsignal:buffers_mouse"
 @item(buffers):button2* = "hsignal:buffers_mouse"
+@item(buflist):button1* = "hsignal:buflist_mouse"
+@item(buflist):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
