weechat: disable mouse
Mouse had been reenabled with 1.8-dev upgrade

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -302,7 +302,7 @@ isetbar.color_fg = default
 isetbar.conditions = ""
 isetbar.filling_left_right = vertical
 isetbar.filling_top_bottom = horizontal
-isetbar.hidden = off
+isetbar.hidden = on
 isetbar.items = "isetbar_help"
 isetbar.position = top
 isetbar.priority = 0
@@ -316,7 +316,7 @@ newsbar.color_fg = default
 newsbar.conditions = ""
 newsbar.filling_left_right = vertical
 newsbar.filling_top_bottom = vertical
-newsbar.hidden = off
+newsbar.hidden = on
 newsbar.items = "newsbar"
 newsbar.position = top
 newsbar.priority = 1000
@@ -330,7 +330,7 @@ newsbar_title.color_fg = default
 newsbar_title.conditions = ""
 newsbar_title.filling_left_right = vertical
 newsbar_title.filling_top_bottom = vertical
-newsbar_title.hidden = off
+newsbar_title.hidden = on
 newsbar_title.items = "newsbar_title"
 newsbar_title.position = top
 newsbar_title.priority = 1010
