--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -24,9 +24,11 @@ alternative_header_second_line_format = "{{$6%b$9}{ [$6%y$9]}}|{%D}"
 
 # color definitions
 main_window_color = "default"
-main_window_highlight_color = "default"
-alternative_ui_separator_color = "yellow"
-progressbar_color = "yellow"
+current_item_prefix = "$(red)$r"
+current_item_suffix = "$/r$(end)"
+current_item_inactive_column_prefix = "$(default)$r"
+alternative_ui_separator_color = "default"
+progressbar_color = "default"
 
 locked_screen_width_part = 40
 screen_switcher_mode = playlist, media_library
