weechat: update autosort rules
Regular chans are now on top of freenode

--- a/weechat/weechat/autosort.conf
+++ b/weechat/weechat/autosort.conf
@@ -13,6 +13,6 @@
 case_sensitive = off
 group_irc = on
 replacements = "[]"
-rules = "[["core", 0], ["irc", 2], ["*", 1], ["irc.irc_raw", 0], ["irc.server", 1], ["irc.server.znc-aruhier", 10], ["irc.server.znc-bitlbee", 15], ["irc.server.znc-rezosup", 20], ["irc.server.znc-freenode", 40], ["irc.server.znc-freemind", 50], ["irc.server.znc-mozilla", 41], ["irc.server.znc-oftc", 42], ["irc.server.znc-whatcd", 51], ["irc.server.znc-pretome", 52]]"
+rules = "[["core", 0], ["irc", 2], ["*", 1], ["irc.irc_raw", 0], ["irc.server", 1], ["irc.server.znc-aruhier", 10], ["irc.server.znc-bitlbee", 15], ["irc.server.znc-rezosup", 20], ["irc.server.znc-freenode", 40], ["irc.server.znc-freenode.[^#]*", 0], ["irc.server.znc-freenode.#neron", 1], ["irc.server.znc-freenode.##glalol", 1], ["irc.server.znc-freenode.#glanet", 10], ["irc.server.znc-freemind", 50], ["irc.server.znc-mozilla", 41], ["irc.server.znc-oftc", 42], ["irc.server.znc-pretome", 50]]"
 signals = "buffer_opened buffer_merged buffer_unmerged buffer_renamed"
 sort_on_config_change = on
