weechat: add otr rules

--- a/weechat/weechat/otr.conf
+++ b/weechat/weechat/otr.conf
@@ -47,6 +47,8 @@ default.html_filter = on
 default.log = off
 default.require_encryption = off
 default.send_tag = off
+znc-freenode.anthony25.arcaik.send_tag = on
+znc-freenode.anthony25.fr33tux.send_tag = on
 znc-rezosup.anthony.arcaik.send_tag = on
 znc-rezosup.anthony.depierre.send_tag = on
 znc-rezosup.anthony.fr33tux.send_tag = on
