weechat: upgrade to weechat 2.0#20170906

--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -283,6 +283,20 @@ buflist.separator = on
 buflist.size = 0
 buflist.size_max = 0
 buflist.type = root
+fset.color_bg = default
+fset.color_delim = cyan
+fset.color_fg = default
+fset.conditions = "${buffer.full_name} == fset.fset"
+fset.filling_left_right = vertical
+fset.filling_top_bottom = horizontal
+fset.hidden = off
+fset.items = "fset"
+fset.position = top
+fset.priority = 0
+fset.separator = on
+fset.size = 3
+fset.size_max = 3
+fset.type = window
 input.color_bg = default
 input.color_delim = default
 input.color_fg = default
@@ -311,6 +325,34 @@ isetbar.separator = on
 isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
+newsbar.color_bg = default
+newsbar.color_delim = default
+newsbar.color_fg = default
+newsbar.conditions = ""
+newsbar.filling_left_right = vertical
+newsbar.filling_top_bottom = vertical
+newsbar.hidden = on
+newsbar.items = "newsbar"
+newsbar.position = top
+newsbar.priority = 1000
+newsbar.separator = on
+newsbar.size = 0
+newsbar.size_max = 4
+newsbar.type = root
+newsbar_title.color_bg = 25
+newsbar_title.color_delim = default
+newsbar_title.color_fg = default
+newsbar_title.conditions = ""
+newsbar_title.filling_left_right = vertical
+newsbar_title.filling_top_bottom = vertical
+newsbar_title.hidden = on
+newsbar_title.items = "newsbar_title"
+newsbar_title.position = top
+newsbar_title.priority = 1010
+newsbar_title.separator = off
+newsbar_title.size = 0
+newsbar_title.size_max = 1
+newsbar_title.type = root
 nicklist.color_bg = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
@@ -675,6 +717,10 @@ meta2-D = "/cursor move left"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
 @bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
 @bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@chat(fset.fset):button1 = "/window ${_window_number};/fset -go ${_chat_line_y}"
+@chat(fset.fset):button2* = "hsignal:fset_mouse"
+@chat(fset.fset):wheeldown = "/fset -down 5"
+@chat(fset.fset):wheelup = "/fset -up 5"
 @chat(perl.iset):button1 = "hsignal:iset_mouse"
 @chat(perl.iset):button2* = "hsignal:iset_mouse"
 @chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
