--- a/firefox/install.conf
+++ b/firefox/install.conf
@@ -1,1 +1,1 @@
-"userChrome.css": "~/.mozilla/firefox/sijaceb3.default-1477136809060"
+"userChrome.css": "~/.mozilla/firefox/sijaceb3.default-1477136809060/chrome/userChrome.css"
