--- a/weechat/weechat/autosort.conf
+++ b/weechat/weechat/autosort.conf
@@ -11,8 +11,12 @@
 
 [sorting]
 case_sensitive = off
-group_irc = on
 replacements = "[]"
-rules = "[["core", 0], ["irc", 2], ["*", 1], ["irc.irc_raw", 0], ["irc.server", 1], ["irc.server.znc-aruhier", 10], ["irc.server.znc-bitlbee", 15], ["irc.server.znc-rezosup", 20], ["irc.server.znc-freenode", 40], ["irc.server.znc-freemind", 50], ["irc.server.znc-mozilla", 41], ["irc.server.znc-oftc", 42], ["irc.server.znc-whatcd", 51], ["irc.server.znc-pretome", 52]]"
+rules = ""
+signal_delay = 5
 signals = "buffer_opened buffer_merged buffer_unmerged buffer_renamed"
 sort_on_config_change = on
+
+[v3]
+helpers = "{"core_first": "${if:${buffer.full_name}!=core.weechat}", "irc_raw_last": "${if:${buffer.full_name}==irc.irc_raw}", "hashless_shortname": "${info:autosort_replace,#,,${if:${buffer.short_name}?${buffer.short_name}:#}}", "irc_last": "${if:${buffer.plugin.name}==irc}", "hashless_name": "${info:autosort_replace,#,,${buffer.name}}", "irc_first": "${if:${buffer.plugin.name}!=irc}", "irc_raw_first": "${if:${buffer.full_name}!=irc.irc_raw}"}"
+rules = "["${core_first}", "${irc_last}", "${buffer.plugin.name}", "${irc_raw_first}", "${if:${plugin}==irc?${info:autosort_order,${server},,znc-aruhier,znc-bitlbee,znc-rezosup,znc-freenode}}", "${if:${plugin}==irc?${server}}", "${if:${plugin}==irc?${info:autosort_order,${type},server,*,private,channel}}", "${if:${plugin}==irc?${if:${server}==znc-freenode?${info:autosort_order,${hashless_shortname},glalol,juleshaag,neron,glanet}}}", "${if:${plugin}==irc?${hashless_name}}", "${buffer.full_name}"]"
