weechat: Upgrade to newest weechat-git

--- a/weechat/weechat/buflist.conf
+++ b/weechat/weechat/buflist.conf
@@ -10,7 +10,10 @@
 #
 
 [look]
+add_newline = on
+auto_scroll = 50
 display_conditions = "${buffer.hidden}==0"
+enabled = on
 mouse_jump_visited_buffer = off
 mouse_move_buffer = on
 mouse_wheel = on
@@ -29,5 +32,8 @@ hotlist_message = "${color:7,default}"
 hotlist_none = "${color:default}"
 hotlist_private = "${color:white}"
 hotlist_separator = "${color:default},"
+indent = "  "
 lag = " ${color:green}[${color:brown}${lag}${color:green}]"
+name = "${name}"
+nick_prefix = "${color_nick_prefix}${nick_prefix}"
 number = "${color:lightgreen}${number}${if:${number_displayed}?.: }"
