--- a/weechat/weechat/weechat.conf
+++ b/weechat/weechat/weechat.conf
@@ -119,6 +119,7 @@ read_marker = line
 read_marker_always_show = off
 read_marker_string = "─"
 save_config_on_exit = on
+save_config_with_fsync = off
 save_layout_on_exit = none
 scroll_amount = 3
 scroll_bottom_after_switch = off
@@ -714,6 +715,10 @@ meta2-D = "/cursor move left"
 @item(buffers):button2* = "hsignal:buffers_mouse"
 @item(buflist):button1* = "hsignal:buflist_mouse"
 @item(buflist):button2* = "hsignal:buflist_mouse"
+@item(buflist2):button1* = "hsignal:buflist_mouse"
+@item(buflist2):button2* = "hsignal:buflist_mouse"
+@item(buflist3):button1* = "hsignal:buflist_mouse"
+@item(buflist3):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
