Fix pinentry with ssh

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -26,6 +26,9 @@ keyserver keys.gnupg.net
 keyserver hkp://subkeys.pgp.net
 keyserver http://pgp.mit.edu
 
+use-agent
+pinentry-mode loopback
+
 # Automatically download unknown gpg keys
 keyserver-options auto-key-retrieve
 
