--- a/bspwm/install.conf
+++ b/bspwm/install.conf
@@ -1,2 +1,4 @@
 "bspwmrc": "~/.config/bspwm/bspwmrc"
 "wallpaper": "~/.config/bspwm/wallpaper"
+"lg_ips236.icc": "~/.config/bspwm/lg_ips236.icc"
+"hyundai_hdw220d.icc": "~/.config/bspwm/hyundai_hdw220d.icc"
