Add calibration for dell U2715H

--- a/bspwm/install.conf
+++ b/bspwm/install.conf
@@ -2,3 +2,4 @@
 "wallpaper": "~/.config/bspwm/wallpaper"
 "lg_ips236.icc": "~/.config/bspwm/lg_ips236.icc"
 "hyundai_hdw220d.icc": "~/.config/bspwm/hyundai_hdw220d.icc"
+"dell_u2715h.icc": "~/.config/bspwm/dell_u2715h.icc"
