Remove dupplicated `preserve` option

--- a/redshift/redshift.conf
+++ b/redshift/redshift.conf
@@ -9,7 +9,7 @@ temp-night=3500
 ; 1 will gradually increase or decrease the screen temperature
 transition=1
 
-preserve=1
+adjustment-method=randr
 
 [randr]
 preserve=1
