--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -15,12 +15,6 @@ shadow-exclude = [
 ];
 
 # Opacity
-menu-opacity = 1.0;
-active-opacity = 1.0;
-inactive-opacity = 1.0;
-frame-opacity = 1.0;
-inactive-opacity-override = false;
-alpha-step = 0.06;
 blur-kern = "3x3box"
 blur-background-exclude = [
 	"window_type = 'dock'",
@@ -31,10 +25,6 @@ opacity-rule = [ "40:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
 
 # Fading
 fading = false;
-fade-delta = 30;
-fade-in-step = 1;
-fade-out-step = 0.13;
-fade-exclude = [ ];
 
 # Other
 backend = "glx"
@@ -44,9 +34,8 @@ use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "opengl-mswc";
+vsync = "opengl-swc";
 dbe = false;
-paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
