Compton: Rollback some previously cleaned options

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -15,6 +15,11 @@ shadow-exclude = [
 ];
 
 # Opacity
+menu-opacity = 1.0;
+active-opacity = 1.0;
+inactive-opacity = 1.0;
+frame-opacity = 1.0;
+inactive-opacity-override = false;
 blur-kern = "3x3box"
 blur-background-exclude = [
 	"window_type = 'dock'",
@@ -25,6 +30,10 @@ opacity-rule = [ "40:class_g = 'Bspwm' && class_i = 'presel_feedback'" ];
 
 # Fading
 fading = false;
+fade-delta = 30;
+fade-in-step = 1;
+fade-out-step = 0.13;
+fade-exclude = [ ];
 
 # Other
 backend = "glx"
