compton: clean shadow deprecated options

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,7 +1,5 @@
 # Shadow
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
@@ -60,4 +58,6 @@ glx-swap-method = "buffer-age";
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.93; focus = true; };
+  dock = { shadow = false; };
+  dnd = { shadow = false; };
 };
