Fix gpg keyservers

--- a/gnupg/gpg.conf
+++ b/gnupg/gpg.conf
@@ -22,8 +22,7 @@
 
 # Uncomment the following option to get rid of the copyright notice
 
-keyserver keys.gnupg.net
-keyserver hkp://subkeys.pgp.net
+keyserver hkp://keys.gnupg.net
 keyserver http://pgp.mit.edu
 keyserver hkps://hkps.pool.sks-keyservers.net
 
