--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -39,7 +39,7 @@ use-ewmh-active-win = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "opengl-swc";
+vsync = true;
 dbe = false;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
